<resources>
    <string name="app_name">手机修复</string>
    <string name="data_recovery">数据修复</string>
    <string name="recover_early">越早修复</string>
    <string name="higher_chance">几率越高！！！</string>
    <string name="safe_efficient">安全高效</string>
    <string name="privacy_assured">隐私无忧</string>
    <string name="news">资讯</string>
    <string name="notification_example">193****347 购买了微信消息修复</string>
    <string name="popular_features">热门功能</string>
    <string name="other_services">其他服务</string>
    <string name="tab_home">首页</string>
    <string name="cases">案例</string>
    <string name="order">订单</string>
    <string name="profile">我的</string>
    <string name="my_orders">我的订单</string>
    <string name="no_orders">暂无订单</string>
    <string name="no_order_records">您还没有任何订单记录</string>
    <string name="order_number">订单编号：</string>
    <string name="order_time">下单时间：</string>
    <string name="order_amount">金额：</string>
    <string name="order_status_processing">处理中</string>
    <string name="order_status_completed">已完成</string>
    <string name="order_status_cancelled">已取消</string>
    <string name="order_status_pending">待支付</string>
    <string name="view_order_detail">立即付款</string>
    <string name="contact_service">联系客服</string>
    <string name="cancel_order">取消订单</string>
    <string name="wechat_message_repair">微信消息修复</string>
    <string name="wechat_message_repair_desc">微信聊天记录修复</string>
    <string name="wechat_friend_repair">微信好友修复</string>
    <string name="wechat_friend_repair_desc">微信好友误删修复</string>
    <string name="image_repair">图片修复</string>
    <string name="image_repair_desc">手机丢失图片修复</string>
    <string name="image_scale">图片缩放</string>
    <string name="image_scale_desc">图片放大缩小工具</string>
    <string name="image_crop">图片裁剪</string>
    <string name="image_crop_desc">图片剪裁编辑工具</string>
    <string name="file_transfer">文件传输</string>
    <string name="file_transfer_desc">设备间文件传输</string>
    <string name="call_log_repair">通话记录修复</string>
    <string name="call_log_repair_desc">手机通话记录修复</string>
    <string name="sms_repair">短信修复</string>
    <string name="sms_repair_desc">手机短信记录修复</string>
    <string name="file_repair">文件修复</string>
    <string name="video_repair">视频修复</string>
    <string name="audio_repair">音频修复</string>
    <string name="image_clear">图片清除</string>
    <string name="qq_data_repair">QQ数据修复</string>
    <string name="wechat_bill_repair">微信账单修复</string>
    <string name="tiktok_data_repair">抖音数据修复</string>
    <string name="engineer_remote_help">工程师远程协助</string>
    <string name="trial">付费</string>
    <string name="free">免费</string>
    <string name="paid">付费</string>
    <string name="unlock_member_feature">开启会员功能</string>
    <string name="member_feature_description">此功能需要开通会员才能使用</string>
    <string name="activate_now">立即开通</string>
    <string name="view_logo_designs">查看Logo设计</string>
    <string name="about_us">关于我们</string>
    <string name="back">返回</string>
    <string name="company_logo">公司标志</string>
    <string name="company_info">企业信息</string>
    <string name="company_name">企业名称</string>
    <string name="company_name_value">苏州沐决网络科技有限公司</string>
    <string name="founded_year">成立时间</string>
    <string name="founded_year_value">2018年</string>
    <string name="established_year">成立年份</string>
    <string name="established_year_value">2018年</string>
    <string name="product_name">产品名称</string>
    <string name="product_name_value">手机修复备份</string>
    <string name="current_version">当前版本</string>
    <string name="current_version_value">V7.3</string>
    <string name="company_intro">企业简介</string>
    <string name="company_desc_1">苏州沐决网络科技有限公司是一家专注于移动数据修复技术的高科技企业。我们致力于为用户提供专业、高效、安全的数据修复解决方案，帮助用户找回珍贵的数字回忆。</string>
    <string name="company_desc_2">我们的团队由一群热爱技术、充满创新精神的工程师组成，拥有多年数据修复行业经验，擅长移动设备数据修复和修复。</string>
    <string name="product_features">产品特点</string>
    <string name="feature_1">专业的微信数据修复能力，支持聊天记录、图片、视频等多种数据修复</string>
    <string name="feature_2">快速扫描识别，精准定位丢失数据</string>
    <string name="feature_3">安全保障，修复过程中不会泄露用户隐私</string>
    <string name="feature_4">操作简单，无需复杂步骤即可完成数据修复</string>
    <string name="feature_5">专业的技术支持，为用户提供全方位服务</string>
    <string name="contact_us">联系客服</string>
    <string name="phone">电话</string>
    <string name="customer_phone">客服电话：400-888-8888</string>
    <string name="customer_service_phone">客服电话：400-888-8888</string>
    <string name="qq_item">QQ</string>
    <string name="customer_qq">客服QQ：37115958</string>
    <string name="customer_service_qq">客服QQ：37115958</string>
    <string name="email">邮箱</string>
    <string name="customer_email">邮箱：service@example.com</string>
    <string name="customer_service_email">邮箱：service@example.com</string>
    <string name="location">位置</string>
    <string name="address">地址</string>
    <string name="customer_address">地址：江苏省苏州市高新区科技创新大厦</string>
    <string name="company_address">江苏省苏州市高新区科技创新大厦</string>
    <string name="wechat_item">微信</string>
    <string name="tiktok">抖音</string>
    <string name="website">网站</string>
    <string name="weibo">微博</string>
    <string name="copyright">© 2024 苏州沐决网络科技有限公司 版权所有</string>
    <string name="return_to_profile">返回个人中心</string>
    <string name="back_to_profile">返回个人中心</string>
    <string name="all_audio">全部音频</string>
    <string name="menu">菜单</string>
    <string name="time">时间</string>
    <string name="size">大小</string>
    <string name="scanned_progress">已扫描 10%</string>
    <string name="scan_deeper_desc">开启「深层扫描」可查看更多音频</string>
    <string name="recover">去修复</string>
    <string name="select_local_audio">选择本地音频文件进行扫描</string>
    <string name="select_audio_desc">请选择您想要扫描的音频文件</string>
    <string name="select_audio">选择音频</string>
    <string name="start_scan">开始扫描</string>
    <string name="recover_and_scan_deep">去修复 开放深层扫描查找全部数据</string>
    <string name="scanning_audio_files">正在扫描音频文件</string>
    <string name="scanning_audio_desc">系统正在分析您的设备以查找可修复的音频文件，请稍候...</string>
    <string name="found_files">已找到 %1$d 个文件</string>
    <string name="payment">支付中心</string>
    <string name="deep_scan_service">深层扫描服务</string>
    <string name="service_price">¥39.90</string>
    <string name="service_description">开启深层扫描服务，可以彻底扫描设备存储空间，修复更多被删除的数据</string>
    <string name="service_features">服务特点</string>
    <string name="payment_method">支付方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝</string>
    <string name="pay_now">立即支付</string>
    <string name="payment_terms">支付即表示您同意《服务条款》和《隐私政策》</string>
    <string name="payment_processing">支付处理中</string>
    <string name="wait_for_payment">请稍候，我们正在处理您的付款...</string>
    <string name="payment_success">支付成功</string>
    <string name="payment_success_desc">您已成功购买深层扫描服务，可立即查看更多数据</string>
    <string name="order_detail">订单详情</string>
    <string name="service_activated">服务已激活，长期有效</string>
    <string name="view_results">查看扫描结果</string>
    <string name="back_to_main">返回首页</string>
    <string name="video_recovery_service">视频深层扫描服务</string>
    <string name="audio_recovery_service">音频深层扫描服务</string>
    <string name="file_recovery_service">文件深层扫描服务</string>
    <string name="video_recovery_desc">您的视频深度扫描服务已开通</string>
    <string name="audio_recovery_desc">您的音频深度扫描服务已开通</string>
    <string name="file_recovery_desc">您的文件深度扫描服务已开通</string>
    <string name="video_recovery_success_desc">视频深度扫描服务已开通，立即查看完整扫描结果</string>
    <string name="audio_recovery_success_desc">音频深度扫描服务已开通，立即查看完整扫描结果</string>
    <string name="file_recovery_success_desc">文件深度扫描服务已开通，立即查看完整扫描结果</string>
    <string name="congrats_payment_success">+恭喜支付成功+</string>
    <string name="phone_form_title">手机号码：方便工程师好与您联系</string>
    <string name="phone_form_subtitle">仅差最后一步，请您填写正确的手机号码，\n以便工程师为您服务</string>
    <string name="phone_input_hint">请输入您的手机号码</string>
    <string name="submit">提交</string>
    <string name="tips_title">温馨提示</string>
    <string name="tip_1">预留手机号码是为了方便与您对接</string>
    <string name="tip_2">可根据教程或在线客服协助服务</string>
    <string name="tip_3">可联系在线客服开具增值税发票(支持电子发票)</string>
    <string name="service_info_text">⚠️ 数据网络开启可能会消耗流量，请手动关闭。</string>
    <string name="submit_success">提交成功！</string>
    <string name="phone_submit_success_desc">您的手机号码已成功提交，工程师会尽快与您联系。</string>
    <string name="return_to_home">返回首页</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="privacy_policy_content">尊敬的用户：\n\n欢迎使用「手机修复」应用程序（以下简称"本应用"）。本隐私政策旨在帮助您了解我们如何收集、使用、存储和共享您的个人信息，以及您享有的相关权利。请您在使用我们的服务前，仔细阅读并了解本隐私政策的全部内容。\n\n一、我们收集的信息\n\n1.1 您提供的信息：当您注册账户、使用本应用功能或联系客服时，我们会收集您主动提供的信息，如姓名、电话号码、电子邮箱等。\n\n1.2 设备信息：我们会自动收集您使用本应用的设备信息，如设备型号、操作系统版本、设备标识符、IP地址等。\n\n1.3 应用使用数据：为了提供更好的服务，我们会记录您如何使用本应用的数据，包括您访问的页面、使用的功能以及操作行为。\n\n二、信息使用\n\n2.1 提供服务：我们使用收集到的信息来提供、维护和改进我们的服务，如数据修复、文件传输等功能。\n\n2.2 安全保障：我们使用您的信息来验证身份、防止欺诈等不法行为，保障您的账户和数据安全。\n\n2.3 改进服务：我们会分析用户行为数据，以便了解用户需求，改进产品体验。\n\n三、信息共享\n\n除非获得您的明确同意，或法律法规要求，我们不会与任何第三方分享您的个人信息。我们可能在以下情况下共享您的个人信息：\n\n3.1 征得您的明确同意；\n\n3.2 应法律法规要求、强制性的行政执法或司法要求；\n\n3.3 在涉及合并、收购或资产转让时，我们会要求新的持有方继续受本隐私政策的约束。\n\n四、信息安全\n\n我们非常重视您个人信息的安全，采取各种物理、电子和管理措施来保护您的个人信息不被未经授权的访问、使用或泄露。\n\n五、您的权利\n\n您对自己的个人信息拥有以下权利：\n\n5.1 访问权：您有权访问我们持有的关于您的个人信息。\n\n5.2 更正权：如果您认为我们持有的关于您的个人信息不准确，您有权要求我们更正。\n\n5.3 删除权：在某些情况下，您有权要求删除我们持有的关于您的个人信息。\n\n六、隐私政策的更新\n\n我们可能会不时更新本隐私政策。当我们更新隐私政策时，会在本应用中发布最新版本，并在生效前通知您。请定期查看本隐私政策以了解任何变更。\n\n七、联系我们\n\n如果您对本隐私政策有任何疑问、意见或建议，请通过以下方式与我们联系：\n\n电子邮件：privacy@example.com\n客服电话：400-888-8888\n\n苏州沐决网络科技有限公司\n最近更新日期：2024年5月15日</string>
    <string name="image_preview">图片预览</string>
    <string name="rotate">旋转</string>
    <string name="crop">裁剪</string>
    <string name="save">保存</string>
    <string name="cropping">裁剪中</string>
    <string name="cropping_in_progress">正在裁剪图片，请稍候...</string>
    <string name="crop_success">裁剪成功</string>
    <string name="image_saved">图片已保存</string>
    <string name="discard_changes">放弃修改？</string>
    <string name="discard_changes_message">您有未保存的修改，确定要退出吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="scale">缩放</string>
    <string name="scale_percent">%1$d%%</string>
    <string name="apply">应用</string>
    <string name="processing">处理中</string>
    <string name="processing_image">正在处理图片，请稍候...</string>
    <string name="scale_applied">缩放已应用</string>
    <string name="file_send">文件发送</string>
    <string name="add_file">添加文件</string>
    <string name="sending_progress">已发送 %1$d%%</string>
    <string name="send_file">发送文件</string>
    <string name="file_icon">文件图标</string>
    <string name="please_select_files">请选择要发送的文件</string>
    <string name="send_complete">发送完成</string>
    <string name="files_sent_success">文件已成功发送</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="feature_coming_soon">功能即将推出</string>
    <string name="file_photos">照片</string>
    <string name="file_videos">视频</string>
    <string name="file_docs">文档</string>
    <string name="file_music">音乐</string>
    <string name="service_hours">客服服务时间：9:00-21:00（工作日及周末）</string>
    <string name="contact_methods">联系方式</string>
    <string name="online_support">在线客服</string>
    <string name="online_support_desc">工作时间内快速回复，解决您的问题</string>
    <string name="consult">咨询</string>
    <string name="hotline">客服热线</string>
    <string name="supervision_complaint">监督投诉</string>
    <string name="complaint_type">投诉类型</string>
    <string name="contact_method">联系方式</string>
    <string name="enter_phone_number">请输入您的联系电话</string>
    <string name="complaint_order_number">订单号</string>
    <string name="enter_order_number">请输入相关订单号（选填）</string>
    <string name="complaint_content">投诉内容</string>
    <string name="describe_issue_detail">请详细描述问题...</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="processing_notice">我已知晓并同意贵公司对我提交的投诉进行处理</string>
    <string name="submit_complaint">提交投诉</string>
    <string name="recovery_dialog_title">扫描提示</string>
    <string name="recovery_dialog_content">需要开放「深层扫描」才能查看全部数据，是否立即修复？</string>
</resources>